<?xml version="1.0"?>
<package>

  <name>mypackage</name>
  <version>0.0.0</version>
  <description>The mypackage package</description>
  <maintainer email="turtlebot@todo.todo">turtlebot</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>pcl_ros</build_depend>
    <run_depend>image_transport</run_depend>
<run_depend>rospy</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <export>
  </export>

</package>
